youfull/objects/My_Business_Row__c.object
<CustomObject>
    <fields>
        <fullName>CC_1nd_Gen_Cnt__c</fullName>
        <label>CC 1nd Gen Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CC_1st_Gen_Amt__c</fullName>
        <label>CC 1st Gen Amt</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CC_1st_Gen_Txt__c</fullName>
        <label>CC 1st Gen Txt</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_2nd_Gen_Amt__c</fullName>
        <label>CC 2nd Gen Amt</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CC_2nd_Gen_Cnt__c</fullName>
        <label>CC 2nd Gen Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CC_2nd_Gen_Txt__c</fullName>
        <label>CC 2nd Gen Txt</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_3rd_Gen_Amt__c</fullName>
        <label>CC 3rd Gen Amt</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CC_3rd_Gen_Cnt__c</fullName>
        <label>CC 3rd Gen Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CC_3rd_Gen_Txt__c</fullName>
        <label>CC 3rd Gen Txt</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Amt__c</fullName>
        <label>CC Amt</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CC_Cnt__c</fullName>
        <label>CC Count</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CC_Date__c</fullName>
        <label>CC Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CC_Txt__c</fullName>
        <label>CC Txt</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Type__c</fullName>
        <label>Data Type</label>
        <picklist>
            <picklistValues>
                <fullName>Currency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Text</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Market_Tag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Market Tag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Title_Tag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Title Tag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NC_Amt__c</fullName>
        <label>NC Amt</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NC_Cnt__c</fullName>
        <label>NC Count</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NC_Txt__c</fullName>
        <label>NC Txt</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Odd_Row__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Odd Row</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Override_Label__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override Label</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_1st_Gen_Amt__c</fullName>
        <label>PC_1st_Gen_Amt</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_2nd_Gen_Amt__c</fullName>
        <label>PC_2nd_Gen_Amt</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_3rd_Gen_Amt__c</fullName>
        <label>PC_3rd_Gen_Amt</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_Amt__c</fullName>
        <label>PC Amt</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_Cnt__c</fullName>
        <label>PC Count</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_Txt__c</fullName>
        <label>PC Txt</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Up_Down_Ind__c</fullName>
        <formula>IF( CC_Amt__c &gt; PC_Amt__c,&apos;UP&apos;,&apos;DOWN&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PC Up Down Ind</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Row_Label__c</fullName>
        <label>Row Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Row_Nbr__c</fullName>
        <label>Row Nbr</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_Amt__c</fullName>
        <label>SPPY Amt</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_Cnt__c</fullName>
        <label>SPPY Count</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_Txt__c</fullName>
        <label>SPPY Txt</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPPY_Up_Down_Ind__c</fullName>
        <formula>IF( CC_Amt__c &gt; SPPY_Amt__c,&apos;UP&apos;,&apos;DOWN&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SPPY Up Down Ind</label>
        <type>Text</type>
    </fields>
    <label>My Business Row</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MBR-{0000000}</displayFormat>
        <label>My Business Row Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>My Business Rows</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>